Replaced placeholder environment variables. Replaced PluginManagement repo URL with property access.